--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       const userInput = document.getElementById("user-input");
       const sendBtn = document.getElementById("send-btn");
 
-      const API_KEY = ".........................."; // ⚠️ Replace with your Gemini key
+      const API_KEY = "YOUR_API_KEY_HERE"; // ⚠️ Replace with your Gemini key
 
       async function sendMessage() {
         const message = userInput.value.trim();
